--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,9 @@
   --color-secundario: #183B4E;    /* Azul oscuro para fondo de secciones */
   --color-acento: #DDA853;        /* Dorado/ocre para detalles y botones */
   --color-texto: #183B4E;         /* También para mantener legibilidad */
+
+  --fuente-montserrat: 'Montserrat', sans serif;
+  --fuente-krona: 'Krona One', sans serif;
 }
 
 * {
@@ -42,6 +45,7 @@ header{
     justify-content: center;
     height: 70px;
     padding: 0px 20px;
+    border-bottom: 0.5rem solid var(--color-secundario);
 }
 
 .header_nav{
@@ -54,9 +58,9 @@ header{
 }
 
 .header_menu_link{
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fuente-montserrat);
     padding: 5px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--color-secundario);
     text-decoration: none;
@@ -90,7 +94,7 @@ header{
 
 .presentacion__contenido__titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fuente-krona);
 }
 
 .titulo-destaque {
@@ -98,9 +102,15 @@ header{
 }
 
 .presentacion__contenido__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     text-align: justify;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fuente-montserrat);
+}
+
+.presentacion__contenido__texto a{
+    text-decoration: none;
+    font-weight: 1000;
+    color: var(--color-primario);
 }
 
 .presentacion__enlaces{
@@ -108,12 +118,12 @@ header{
     width: 100%;
     align-items: center;
     flex-direction: column;
-    gap: 32px;
+    gap: 2rem;
 }
 
 .presentacion_enlaces_subtitulo{
-    font-family: 'Krona One', sans-serif;
-    font-size: 24px;
+    font-family: var(--fuente-krona);
+    font-size: 1.5rem;
 }
 
 .presentacion_enlaces_botones{
@@ -128,12 +138,12 @@ header{
     width: 190px;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--color-secundario);
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fuente-montserrat);
     border: 2px solid var(--color-secundario);
     transition: all 0.3s ease;
     display: flex;
@@ -171,7 +181,11 @@ header{
 .img_completa{
     height: 100%;
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: 1.5rem;
+    align-items: center;
+    align-self: flex-start;
 }
 
 .img_borde{
@@ -194,12 +208,43 @@ header{
     transform: translateX(-20px) translateY(20px); /* Cancelamos el movimiento visual */
 }
 
+.img_boton{
+    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: var(--color-fondo);
+    color: var(--color-secundario);
+    text-decoration: none;
+    border: 4px solid var(--color-secundario);
+    border-radius: 10px;
+    transition: all 0.3s ease;
+}
+
+.img_boton:hover{
+    max-width: 40rem;
+    max-height: 40rem;
+    padding: 2rem;
+    font-size: 2rem;
+    background-color: var(--color-primario);
+    border-color: var(--color-primario);
+    color: var(--color-fondo);
+    font-weight: 600;
+}
+
 /*Pie de pagina*/
 footer{
     background-color: var(--color-secundario);
     color: var(--color-fondo);
-    height: 50px;
+    font-size: 1rem;
+    height: 70px;
     flex-shrink: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+footer a{
+    text-decoration: none;
+    color: var(--color-acento);
 }
