--- a/style/style.css
+++ b/style/style.css
@@ -2,32 +2,38 @@
 
 /*Configuracion inicial*/
 :root {
-  --color-fondo: #F3F3E0;         /* Fondo claro, elegante y suave */
-  --color-primario: #27548A;      /* Azul fuerte para elementos destacados */
-  --color-secundario: #183B4E;    /* Azul oscuro para fondo de secciones */
-  --color-acento: #DDA853;        /* Dorado/ocre para detalles y botones */
-  --color-texto: #183B4E;         /* También para mantener legibilidad */
+    --color-fondo: #F3F3E0;
+    /* Fondo claro, elegante y suave */
+    --color-primario: #27548A;
+    /* Azul fuerte para elementos destacados */
+    --color-secundario: #183B4E;
+    /* Azul oscuro para fondo de secciones */
+    --color-acento: #DDA853;
+    /* Dorado/ocre para detalles y botones */
+    --color-texto: #183B4E;
+    /* También para mantener legibilidad */
 
-  --fuente-montserrat: 'Montserrat', sans serif;
-  --fuente-krona: 'Krona One', sans serif;
+    --fuente-montserrat: 'Montserrat', sans serif;
+    --fuente-krona: 'Krona One', sans serif;
 }
 
 * {
     padding: 0;
-    margin:0;
+    margin: 0;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-body, html{
+body,
+html {
     height: 100%;
     width: 100%;
     background-color: var(--color-fondo);
@@ -39,7 +45,7 @@ body, html{
 }
 
 /*Encabezado*/
-header{
+header {
     display: flex;
     flex-shrink: 0;
     justify-content: center;
@@ -48,7 +54,7 @@ header{
     border-bottom: 0.5rem solid var(--color-secundario);
 }
 
-.header_nav{
+.header_nav {
     display: flex;
     max-width: 1200px;
     width: 100%;
@@ -57,7 +63,7 @@ header{
     gap: 70px;
 }
 
-.header_menu_link{
+.header_menu_link {
     font-family: var(--fuente-montserrat);
     padding: 5px;
     font-size: 1.5rem;
@@ -66,7 +72,7 @@ header{
     text-decoration: none;
 }
 
-.header_menu_link:hover{
+.header_menu_link:hover {
     border-radius: 10px;
     background-color: var(--color-primario);
     color: var(--color-fondo);
@@ -86,7 +92,7 @@ header{
     flex-wrap: wrap;
 }
 
-.presentacion__contenido{
+.presentacion__contenido {
     width: 40%;
     flex-grow: 2;
     display: flex;
@@ -94,7 +100,7 @@ header{
     gap: 40px;
 }
 
-.presentacion__contenido__titulo{
+.presentacion__contenido__titulo {
     font-size: 2.25rem;
     font-family: var(--fuente-krona);
 }
@@ -103,26 +109,26 @@ header{
     color: var(--color-acento);
 }
 
-.presentacion__contenido__texto{
+.presentacion__contenido__texto {
     font-size: 1.5rem;
     text-align: justify;
     font-family: var(--fuente-montserrat);
 }
 
-.presentacion__contenido__texto a{
+.presentacion__contenido__texto a {
     text-decoration: none;
     font-weight: 1000;
     color: var(--color-primario);
 }
 
-.presentacion__contenido__texto_resaltado{
+.presentacion__contenido__texto_resaltado {
     background-color: var(--color-acento);
     font-size: 1.5rem;
     border-radius: 0.5rem;
     padding: 1rem;
 }
 
-.presentacion__enlaces{
+.presentacion__enlaces {
     display: flex;
     width: 100%;
     align-items: center;
@@ -130,12 +136,12 @@ header{
     gap: 2rem;
 }
 
-.presentacion_enlaces_subtitulo{
+.presentacion_enlaces_subtitulo {
     font-family: var(--fuente-krona);
     font-size: 1.5rem;
 }
 
-.presentacion_enlaces_botones{
+.presentacion_enlaces_botones {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -143,7 +149,7 @@ header{
     flex-wrap: wrap;
 }
 
-.presentacion__enlaces__link{
+.presentacion__enlaces__link {
     width: 190px;
     text-align: center;
     border-radius: 8px;
@@ -161,33 +167,36 @@ header{
     gap: 10px;
 }
 
-.presentacion__enlaces__link img{
+.presentacion__enlaces__link img {
     max-width: 25px;
     width: 100%;
     height: 25px;
 }
-.presentacion__enlaces__link .img1{
-    display: inline-block;
-}
-.presentacion__enlaces__link:hover .img1{
-    display: none;
-}
 
-.presentacion__enlaces__link .img2{
-    display: none;
-}
-.presentacion__enlaces__link:hover .img2{
+.presentacion__enlaces__link .img1 {
     display: inline-block;
 }
 
-.presentacion__enlaces__link:hover{
+.presentacion__enlaces__link:hover .img1 {
+    display: none;
+}
+
+.presentacion__enlaces__link .img2 {
+    display: none;
+}
+
+.presentacion__enlaces__link:hover .img2 {
+    display: inline-block;
+}
+
+.presentacion__enlaces__link:hover {
     transform: scale(1.05);
     color: var(--color-fondo);
     border: 2px solid var(--color-primario);
     background-color: var(--color-primario);
 }
 
-.img_completa{
+.img_completa {
     flex-grow: 1;
     max-width: 600px;
     width: 100%;
@@ -200,7 +209,7 @@ header{
     align-self: flex-start;
 }
 
-.img_borde{
+.img_borde {
     width: 90%;
     height: auto;
     display: block;
@@ -208,18 +217,20 @@ header{
     border: 5px solid var(--color-secundario);
     margin-top: 2rem;
     padding: 0px;
-    transform: translateX(20px) translateY(-20px); /* Mueve el borde hacia la derecha */
+    transform: translateX(20px) translateY(-20px);
+    /* Mueve el borde hacia la derecha */
 }
 
-.img_borde img{
+.img_borde img {
     width: 100%;
     height: auto;
     display: block;
     border-radius: 10px;
-    transform: translateX(-20px) translateY(20px); /* Cancelamos el movimiento visual */
+    transform: translateX(-20px) translateY(20px);
+    /* Cancelamos el movimiento visual */
 }
 
-.img_boton{
+.img_boton {
     padding: 1rem;
     font-size: 1.5rem;
     background-color: var(--color-fondo);
@@ -230,7 +241,7 @@ header{
     transition: all 0.3s ease;
 }
 
-.img_boton:hover{
+.img_boton:hover {
     max-width: 40rem;
     max-height: 40rem;
     padding: 2rem;
@@ -241,7 +252,7 @@ header{
     font-weight: 600;
 }
 
-.habilidades__grid{
+.habilidades__grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     gap: 20px;
@@ -251,13 +262,13 @@ header{
 }
 
 .habilidades__grid img {
-  width: 40px;
-  height: 40px;
-  margin-bottom: 8px;
+    width: 40px;
+    height: 40px;
+    margin-bottom: 8px;
 }
 
 /*Pie de pagina*/
-footer{
+footer {
     background-color: var(--color-secundario);
     color: var(--color-fondo);
     font-size: 1.2rem;
@@ -271,102 +282,120 @@ footer{
     gap: 5px;
 }
 
-footer a{
+footer a {
     text-decoration: none;
     color: var(--color-acento);
 }
 
-@media (max-width: 1370px){
+@media (max-width: 1370px) {
 
-    header{
+    header {
         padding: 6%;
     }
 
-    .header_nav{
+    .header_nav {
         gap: 50px;
         justify-content: center;
     }
 
-    .header_menu_link{
+    .header_menu_link {
         font-size: 1.5rem;
     }
 
-    .presentacion{
+    .presentacion {
         flex-direction: column-reverse;
         overflow-x: visible;
         flex-wrap: nowrap;
         gap: 50px;
     }
-    .presentacion__contenido{
+
+    .presentacion__contenido {
         width: auto;
     }
-    .presentacion__contenido__titulo{
+
+    .presentacion__contenido__titulo {
         text-align: center;
         font-size: 1.5rem;
     }
-    .img_completa{
-        
+
+    .img_completa {
+
         align-self: center;
     }
-    .img_boton:hover{
-    max-width: 40rem;
-    max-height: 10rem;
-    padding: 0.7rem 2rem;
-    font-weight: 500;
+
+    .img_boton:hover {
+        max-width: 40rem;
+        max-height: 10rem;
+        padding: 0.7rem 2rem;
+        font-weight: 500;
     }
-    .habilidades__grid{
+
+    .habilidades__grid {
         width: 600px;
         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
         gap: 30px;
     }
 }
 
-@media (max-width: 540px){
+@media (max-width: 540px) {
 
-    body, html{
-        gap: 20px;
-    }
-    .header_nav{
+    body,
+    html {
         gap: 20px;
     }
 
-    .header_menu_link{
+    .header_nav {
+        gap: 20px;
+    }
+
+    .header_menu_link {
         font-size: 1rem;
     }
-    .presentacion{
+
+    .presentacion {
         flex-direction: column-reverse;
         overflow-x: visible;
         flex-wrap: nowrap;
         gap: 20px;
     }
-    .presentacion__contenido{
+
+    .presentacion__contenido {
         gap: 20px;
     }
-    .presentacion__contenido__texto{
+
+    .presentacion__contenido__texto {
         font-size: 1rem;
     }
-    .presentacion_enlaces_subtitulo{
+
+    .presentacion_enlaces_subtitulo {
         font-size: 1.2rem;
         align-self: center;
     }
-    .presentacion__enlaces__link{
-    width: 130px;
-    font-size: 1rem;
-    gap: 5px;
+
+    .presentacion__enlaces__link {
+        width: 130px;
+        font-size: 1rem;
+        gap: 5px;
     }
-    .img_completa{
+
+    .img_completa {
         margin-top: 10px;
         width: auto;
         align-self: center;
     }
-    .img_borde{
+
+    .img_borde {
         margin-top: 10px;
-        transform: translateX(10px) translateY(-10px); /* Mueve el borde hacia la derecha */
+        transform: translateX(10px) translateY(-10px);
+        /* Mueve el borde hacia la derecha */
     }
-    .img_borde img{
-        transform: translateX(-10px) translateY(10px); /* Cancelamos el movimiento visual */
+
+    .img_borde img {
+        transform: translateX(-10px) translateY(10px);
+        /* Cancelamos el movimiento visual */
     }
-    .habilidades__grid{
+
+    .habilidades__grid {
         width: 100%;
         grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
         gap: 30px;
